[package]
name = "on_cart_for_thee"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["webgpu"] } 
bevy_egui = "0.32.0"
bevy-inspector-egui = "0.29"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9" }
bevy_rapier3d =  { version = "0.29", features = [ "simd-stable", "debug-render-3d", "parallel" ] }
bevy_spatial = { version = "0.10.0", default-features = false, features = ["kdtree"] }
blenvy = { version = "0.1.0-alpha.1" }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3