[package]
name = "on_cart_for_thee"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["webgpu"] } 
bevy_egui = "0.32.0"
bevy-inspector-egui = "0.29"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9" }
bevy_rapier3d =  { version = "0.29", features = [ "simd-stable", "debug-render-3d" ] }
bevy_spatial = { version = "0.10.0", default-features = false, features = ["kdtree"] }
blenvy = { version = "0.1.0-alpha.1" }
talc = { version = "4.4.2", default-features = false, features = ["lock_api", "counters"]}
uuid = "1.12.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_rapier3d = { version = "0.29", features = ["parallel"] }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
]

[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
